--- a/contact/app/src/main/res/layout-v14/contact_cell.xml
+++ b/contact/app/src/main/res/layout-v14/contact_cell.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/name_remark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:textColor="@android:color/holo_red_light"
         android:text="姓名" />
 
@@ -21,15 +21,12 @@
         android:id="@+id/phone_remark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
         android:textColor="@android:color/holo_red_light"
         android:text="电话" />
 
     <TextView
         android:id="@+id/phone_text"
         android:layout_width="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/phone_remark" />
+        android:layout_height="wrap_content" />
 
-</RelativeLayout>
+</LinearLayout>
