--- a/contact/app/src/main/res/layout-v14/contact_cell.xml
+++ b/contact/app/src/main/res/layout-v14/contact_cell.xml
@@ -14,8 +14,7 @@
     <TextView
         android:id="@+id/name_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/name_remark" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/phone_remark"
