--- a/contact/app/src/main/res/layout/activity_main.xml
+++ b/contact/app/src/main/res/layout/activity_main.xml
@@ -8,22 +8,34 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="1">
 
         <ListView
             android:id="@+id/contact_list"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1" />
+
+        <ListView
+            android:id="@+id/recent_call_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <ListView
             android:id="@+id/message_list"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </LinearLayout>
